--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "esercizio su api per la 5_informatica",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "author": "",
   "license": "ISC",
